# petricheck

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/model/: label.rs  marking.rs  mod.rs  net.rs  transition.rs
src/model_checking/: mod.rs  props.rs  state.rs  to_kripke.rs
src/reduction/: elimination_self_loop_place.rs  elimination_self_loop_transition.rs  fusion_parallel_places.rs  fusion_parallel_transitions.rs  fusion_series_places.rs  fusion_series_transitions_variant1.rs  fusion_series_transitions_variant2.rs  info.rs  mod.rs  reduce.rs
src/util/: context.rs  mod.rs
src/util/parse_ctl/: error.rs  mod.rs  parse.rs  parser.rs
src/util/parse_pnml/: build.rs  error.rs  extract.rs  mod.rs  syntax.rs
src/util/vizualisation/: kripke_viz.rs  mod.rs  petri_viz.rs
tests/: ksafe_tests.rs  mc_tests.rs  parse_ctl_tests.rs  reduction_tests.rs
