[package]
name = "petricheck"
version = "0.2.1"
authors = ["Erwan Mahe"]
edition = "2024"

license = "Apache-2.0"
description = "A simple symbolic model checker for Petri Nets"


readme = "README.md"
repository = "https://github.com/erwanM974/petricheck"
homepage = "https://github.com/erwanM974/petricheck"

keywords = ["petri-net", "model-checking"]


[dependencies]
xml                  = "1.2.0"
thiserror            = "2.0.17"
map-macro            = "0.3.0"
graphviz_dot_builder = "0.1.5"
itertools            = "0.14.0"
nom                  = "8.0.0"
citreelo             = "0.1.1"


